--- a/Source/Tests/App.config
+++ b/Source/Tests/App.config
@@ -11,8 +11,8 @@
       <add name="endpoint" value="https://api.sandbox.paypal.com"/>
        <add name="connectionTimeout" value="360000"/>
       <add name="requestRetries" value="1"/>
-      <add name="ClientID" value="EBWKjlELKMYqRNQ6sYvFo64FtaRLRR5BdHEESmha49TM"/>
-      <add name="ClientSecret" value="EO422dn3gQLgDbuwqTjzrFgFtaRLRR5BdHEESmha49TM"/>
+      <add name="clientId" value="AUASNhD7YM7dc5Wmc5YE9pEsC0o4eVOyYWO9ezXWBu2XTc63d3Au_s9c-v-U"/>
+      <add name="clientSecret" value="EBq0TRAE-4R9kgCDKzVh09sm1TeNcuY-xJirid7LNtheUh5t5vlOhR0XSHt3"/>
     </settings>
   </paypal>
 
